--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+.well-known
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
