--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   mysql:
-    image: mysql:oracle
+    image: mysql:8.0-bullseye
     container_name: mysql
     restart: always
     environment:
