--- a/src/user.ini
+++ b/src/user.ini
@@ -5,3 +5,15 @@ mbstring.func_overload=0
 always_populate_raw_post_data=-1
 default_charset='UTF-8'
 output_buffering=0
+max_execution_time=0
+max_input_time=-1
+max_input_vars=10000
+session.gc_maxlifetime=1440
+session.cookie_lifetime=0
+session.cookie_path=/
+session.cookie_domain=okudumanladim.com
+session.cookie_secure=1
+session.cookie_httponly=1
+session.use_only_cookies=1
+session.use_strict_mode=1
+session.cookie_samesite="Strict"
