--- a/src/user.ini
+++ b/src/user.ini
@@ -1,5 +1,5 @@
-upload_max_filesize=513M
-post_max_size=513M
+upload_max_filesize=20M
+post_max_size=21M
 memory_limit=512M
 mbstring.func_overload=0
 always_populate_raw_post_data=-1
@@ -11,9 +11,9 @@ max_input_vars=10000
 session.gc_maxlifetime=1440
 session.cookie_lifetime=0
 session.cookie_path=/
-session.cookie_domain=okudumanladim.com
-session.cookie_secure=1
-session.cookie_httponly=1
-session.use_only_cookies=1
+session.cookie_secure=On
+session.use_cookies=On
+session.cookie_httponly=On
 session.use_strict_mode=1
-session.cookie_samesite="Strict"
+session.cookie_samesite=None
+expose_php = off
