--- a/src/admin/.htaccess
+++ b/src/admin/.htaccess
@@ -99,7 +99,7 @@
 
 <IfModule mod_headers.c>
     <FilesMatch "\.(eot|otf|tt[cf]|woff2|js|css?)$">
-    SetEnvIf Origin "http(s)?://(www\.)?(google.com|fonts.gstatic.com|development.google.com|cdn.jsdelivr.net|ssl.gstatic.com|fonts.googleapis.com|eu.umami.is|google-analytics.com|googletagmanager.com)$" AccessControlAllowOrigin=$0
+    SetEnvIf Origin "http(s)?://(www\.)?(google.com|fonts.gstatic.com|cdn.jsdelivr.net|ssl.gstatic.com|fonts.googleapis.com)$" AccessControlAllowOrigin=$0
     Header add Access-Control-Allow-Origin %{AccessControlAllowOrigin}e env=AccessControlAllowOrigin
     Header merge Vary Origin
     </FilesMatch>
@@ -393,26 +393,39 @@ AddDefaultCharset utf-8
 
 DirectoryIndex index.php index.html /index.php
 <IfModule mod_rewrite.c>
+
 # (1)
+
 RewriteEngine On
 
 # (2)
+
 Options +FollowSymlinks
 
 # (3)
+
 # Options +SymLinksIfOwnerMatch
 
 # (4)
+
 RewriteBase /
 
 # (5)
+
 # RewriteOptions <options>
 
     Redirect 301 "/stats" "https://analytics.eu.umami.is/share/DbXZOrTNnrfXGrL0/okudumanladim"
 
+    Redirect 301 "/clickup" "https://sharing.clickup.com/9018008100/l/4-90180070826-1/to-do"
+
+    RedirectMatch 403 ^/vendor/bootstrap/?$
+    RedirectMatch 403 ^/vendor/css/?$
+    RedirectMatch 403 ^/vendor/js/?$
     RedirectMatch 403 ^/vendor/?$
-    RedirectMatch 403 ^/inc/?$
+    RedirectMatch 403 ^/error/?$
     RedirectMatch 403 ^/public/?$
+    RedirectMatch 403 ^/public/assets/?$
+    RedirectMatch 403 ^/public/assets/images/?$
 
     # Remove trailing slash /
     RewriteCond %{REQUEST_FILENAME} !-d
@@ -426,8 +439,8 @@ RewriteBase /
 
     RewriteCond %{REQUEST_FILENAME}.php -f
     RewriteRule !.*\.php$ %{REQUEST_FILENAME}.php [QSA,L]
-</IfModule>
 
+</IfModule>
 
 # ----------------------------------------------------------------------
 
@@ -514,12 +527,14 @@ RewriteBase /
 RewriteEngine On
 
 # (1)
+
 RewriteCond %{HTTPS} =on
 RewriteRule ^ - [E=PROTO:https]
 RewriteCond %{HTTPS} !=on
 RewriteRule ^ - [E=PROTO:http]
 
 # (2)
+
 RewriteCond %{HTTPS} !=on
 
 RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
@@ -844,7 +859,7 @@ Header set X-XSS-Protection "1; mode=block"
 
 # # (1) (2) (3) (4) (5) (6) (7)
 
-Header always set Content-Security-Policy "default-src 'self'; child-src 'none'; base-uri 'none'; form-action 'self'; frame-src 'self'; frame-ancestors 'none'; object-src 'none'; connect-src 'self' https://ssl.gstatic.com https://eu.umami.is; style-src 'self' https://cdn.jsdelivr.net https://fonts.googleapis.com; style-src-elem 'self' https://cdn.jsdelivr.net https://ssl.gstatic.com https://fonts.gstatic.com https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; script-src  'self'; script-src-elem 'self'' https://cdn.jsdelivr.net https://eu.umami.is; block-all-mixed-content; upgrade-insecure-requests" "expr=%{CONTENT_TYPE} =~ m#text\/(html|javascript)|application\/pdf|xml#i"
+Header always set Content-Security-Policy "default-src 'self'; child-src 'none'; base-uri 'none'; img-src \* 'self' data: https:; form-action 'self'; frame-src 'self' https://sharing.clickup.com https://analytics.eu.umami.is; frame-ancestors 'none'; object-src 'none'; connect-src 'self' https://ssl.gstatic.com https://eu.umami.is https://www.google-analytics.com; style-src 'self' https://cdn.jsdelivr.net https://fonts.googleapis.com; style-src-elem 'self' https://cdn.jsdelivr.net https://ssl.gstatic.com https://fonts.gstatic.com https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; script-src 'self' 'nonce-8IBTHwOdqNKAWeKl7plt8g'; script-src-elem 'self' 'nonce-8IBTHwOdqNKAWeKl7plt8g' https://cdn.jsdelivr.net https://eu.umami.is; block-all-mixed-content; upgrade-insecure-requests" "expr=%{CONTENT_TYPE} =~ m#text\/(html|javascript)|application\/pdf|xml#i"
 
 </IfModule>
 
