--- a/.env.local
+++ b/.env.local
@@ -4,3 +4,6 @@ MYSQL_DATABASE=db
 MYSQL_ROOT_PASSWORD=password
 MYSQL_HOST=mysql
 DEV_MODE=true
+APACHE_PORT=8080
+PHPMYADMIN_PORT=8081
+MYSQL_PORT=3306
