--- a/src/user.ini
+++ b/src/user.ini
@@ -15,5 +15,5 @@ session.cookie_secure=On
 session.use_cookies=On
 session.cookie_httponly=On
 session.use_strict_mode=1
-session.cookie_samesite=None
+session.cookie_samesite=Lax
 expose_php = off
