--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,9 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_HOST: ${MYSQL_HOST}
+      MYSQL_PORT: ${MYSQL_PORT}
     ports:
-      - 3306:3306
+      - ${MYSQL_PORT}:3306
     networks:
       - default
     volumes:
@@ -27,13 +28,15 @@ services:
     volumes:
       - ./src/:/var/www/html/
     ports:
-      - 8081:80
+      - ${APACHE_PORT}:80
     environment:
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_HOST: ${MYSQL_HOST}
+      MYSQL_PORT: ${MYSQL_PORT}
+      APACHE_PORT: ${APACHE_PORT}
       DEV_MODE: true
     stdin_open: true
     tty: true
@@ -45,13 +48,15 @@ services:
   phpmyadmin:
     image: phpmyadmin:latest
     ports:
-      - 8080:80
+      - ${PHPMYADMIN_PORT}:80
     restart: always
     environment:
       PMA_HOST: ${MYSQL_HOST}
+      MYSQL_PORT: ${MYSQL_PORT}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      PHPMYADMIN_PORT: ${PHPMYADMIN_PORT}
     depends_on:
       - mysql
     networks:
