--- a/.dockerignore
+++ b/.dockerignore
@@ -14,6 +14,7 @@ pids
 .github
 .git
 README
+README
 LICENSE
 .well-known
 .cache
@@ -21,3 +22,8 @@ dist
 build
 out
 panel
+CNAME
+.prettierrc.json
+.prettieriignore
+.gitattributes
+.editorconfig
