--- a/src/admin/.htaccess
+++ b/src/admin/.htaccess
@@ -393,19 +393,25 @@ AddDefaultCharset utf-8
 
 DirectoryIndex index.php index.html /index.php
 <IfModule mod_rewrite.c>
+
 # (1)
+
 RewriteEngine On
 
 # (2)
+
 Options +FollowSymlinks
 
 # (3)
+
 # Options +SymLinksIfOwnerMatch
 
 # (4)
+
 RewriteBase /
 
 # (5)
+
 # RewriteOptions <options>
 
     Redirect 301 "/stats" "https://analytics.eu.umami.is/share/DbXZOrTNnrfXGrL0/okudumanladim"
@@ -421,8 +427,6 @@ RewriteBase /
     RedirectMatch 403 ^/public/assets/?$
     RedirectMatch 403 ^/public/assets/images/?$
 
-
-
     # Remove trailing slash /
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_URI} (.+)/$
@@ -435,8 +439,8 @@ RewriteBase /
 
     RewriteCond %{REQUEST_FILENAME}.php -f
     RewriteRule !.*\.php$ %{REQUEST_FILENAME}.php [QSA,L]
-</IfModule>
 
+</IfModule>
 
 # ----------------------------------------------------------------------
 
@@ -462,23 +466,23 @@ RewriteBase /
 
 # https://tools.ietf.org/html/draft-ietf-acme-acme-12
 
-<IfModule mod_rewrite.c>
+# <IfModule mod_rewrite.c>
 
-RewriteEngine On
+# RewriteEngine On
 
-RewriteCond %{HTTPS} !=on
+# RewriteCond %{HTTPS} !=on
 
 # # (1)
 
-RewriteCond %{REQUEST_URI} !^/\.well-known/acme-challenge/
+# # RewriteCond %{REQUEST_URI} !^/\.well-known/acme-challenge/
 
-RewriteCond %{REQUEST_URI} !^/\.well-known/cpanel-dcv/[\w-]+$
+# # RewriteCond %{REQUEST_URI} !^/\.well-known/cpanel-dcv/[\w-]+$
 
-RewriteCond %{REQUEST_URI} !^/\.well-known/pki-validation/[A-F0-9]{32}\.txt(?:\ Comodo\ DCV)?$
+# # RewriteCond %{REQUEST_URI} !^/\.well-known/pki-validation/[A-F0-9]{32}\.txt(?:\ Comodo\ DCV)?$
 
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+# RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
-</IfModule>
+# </IfModule>
 
 # ----------------------------------------------------------------------
 
@@ -518,23 +522,25 @@ RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
 # https://github.com/h5bp/server-configs-apache/issues/52
 
-# <IfModule mod_rewrite.c>
+<IfModule mod_rewrite.c>
 
-# RewriteEngine On
+RewriteEngine On
 
 # (1)
-# RewriteCond %{HTTPS} =on
-# RewriteRule ^ - [E=PROTO:https]
-# RewriteCond %{HTTPS} !=on
-# RewriteRule ^ - [E=PROTO:http]
+
+RewriteCond %{HTTPS} =on
+RewriteRule ^ - [E=PROTO:https]
+RewriteCond %{HTTPS} !=on
+RewriteRule ^ - [E=PROTO:http]
 
 # (2)
-# RewriteCond %{HTTPS} !=on
 
-# RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-# RewriteRule ^ %{ENV:PROTO}://%1%{REQUEST_URI} [R=301,L]
+RewriteCond %{HTTPS} !=on
 
-# </IfModule>
+RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+RewriteRule ^ %{ENV:PROTO}://%1%{REQUEST_URI} [R=301,L]
+
+</IfModule>
 
 # ----------------------------------------------------------------------
 
@@ -578,33 +584,33 @@ RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
 # subdomains for certain parts of your website.
 
-<IfModule mod_rewrite.c>
+# <IfModule mod_rewrite.c>
 
-RewriteEngine On
+# RewriteEngine On
 
 # # (1)
 
-RewriteCond %{HTTPS} =on
+# RewriteCond %{HTTPS} =on
 
-RewriteRule ^ - [E=PROTO:https]
+# RewriteRule ^ - [E=PROTO:https]
 
-RewriteCond %{HTTPS} !=on
+# RewriteCond %{HTTPS} !=on
 
-RewriteRule ^ - [E=PROTO:http]
+# RewriteRule ^ - [E=PROTO:http]
 
 # # (2)
 
 # # RewriteCond %{HTTPS} !=on
 
- RewriteCond %{HTTP_HOST} !^www\. [NC]
+# RewriteCond %{HTTP_HOST} !^www\. [NC]
 
- RewriteCond %{SERVER_ADDR} !=127.0.0.1
+# RewriteCond %{SERVER_ADDR} !=127.0.0.1
 
- RewriteCond %{SERVER_ADDR} !=::1
+# RewriteCond %{SERVER_ADDR} !=::1
 
- RewriteRule ^ %{ENV:PROTO}://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+# RewriteRule ^ %{ENV:PROTO}://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
-</IfModule>
+# </IfModule>
 
 #
 
@@ -853,7 +859,7 @@ Header set X-XSS-Protection "1; mode=block"
 
 # # (1) (2) (3) (4) (5) (6) (7)
 
-Header always set Content-Security-Policy "default-src 'self'; child-src 'none'; base-uri 'none'; img-src * 'self' data: https:; form-action 'self'; frame-src 'self'; frame-ancestors 'none'; object-src 'none'; connect-src 'self' https://ssl.gstatic.com https://eu.umami.is; style-src 'self' https://cdn.jsdelivr.net https://fonts.googleapis.com https://fonts.gstatic.com; style-src-elem 'unsafe-inline' https://cdn.jsdelivr.net https://ssl.gstatic.com https://fonts.gstatic.com; font-src 'self' https://fonts.gstatic.com; script-src  'self' https://cdn.jsdelivr.net; script-src-elem 'self' https://cdn.jsdelivr.net https://eu.umami.is; block-all-mixed-content; upgrade-insecure-requests" "expr=%{CONTENT_TYPE} =~ m#text\/(html|javascript)|application\/pdf|xml#i"
+Header always set Content-Security-Policy "default-src 'self'; child-src 'none'; base-uri 'none'; img-src \* 'self' data: https:; form-action 'self'; frame-src 'self' https://sharing.clickup.com https://analytics.eu.umami.is; frame-ancestors 'none'; object-src 'none'; connect-src 'self' https://ssl.gstatic.com https://eu.umami.is https://www.google-analytics.com; style-src 'self' https://cdn.jsdelivr.net https://fonts.googleapis.com; style-src-elem 'self' https://cdn.jsdelivr.net https://ssl.gstatic.com https://fonts.gstatic.com https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; script-src 'self' 'nonce-8IBTHwOdqNKAWeKl7plt8g'; script-src-elem 'unsafe-inline' 'nonce-8IBTHwOdqNKAWeKl7plt8g' https://cdn.jsdelivr.net https://eu.umami.is; block-all-mixed-content; upgrade-insecure-requests" "expr=%{CONTENT_TYPE} =~ m#text\/(html|javascript)|application\/pdf|xml#i"
 
 </IfModule>
 
